Nama Mesin Menjadi Mesin

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="container">
     <h1>Report Mixing</h1>
     <form id="myForm">
-        <label for="namaMesin">Nama Mesin:</label>
+        <label for="namaMesin">Mesin:</label>
         <input type="text" id="namaMesin" name="namaMesin"><br>
         <label for="namaProduk">Nama Produk:</label>
         <input type="text" id="namaProduk" name="namaProduk"><br>
