--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <button type="button" onclick="removeEmptyLines()">Remove Empty Lines</button>
       <button type="button" onclick="copyText()">Copy Text</button>
     </form>
-    <p id="output"></p>
+    <p id="output" class="para2"></p>
   </div>
 
 <script src="script.js"></script>
