--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <input type="text" id="manualQC" name="manualQC" style="display: none;"><br>
         <label for="note">Note:</label>
         <input type="text" id="note" name="note"><br><br>
-        <button type="button" onclick="tampilkanForm()">Tampilkan Isi Form</button>
-        <button type="button" onclick="salinHasil()">Salin Hasil</button>
+        <button type="button" onclick="tampilkanForm()">Tampilkan</button>
+        <button type="button" onclick="salinHasil()">Salin</button>
     </form>
 
     <div id="hasilForm"></div>
@@ -62,12 +62,12 @@
 </div>
 
 <div class="container">
-    <h2>Remove Empty Lines from Text</h2>
+    <h2>Hapus Baris Kosong</h2>
     <form id="form">
-      <label for="textInput">Enter Text:</label>
+      <label for="textInput">Masukan Teks:</label>
       <textarea id="textInput" rows="5" cols="50"></textarea>
-      <button type="button" onclick="removeEmptyLines()">Remove Empty Lines</button>
-      <button type="button" onclick="copyText()">Copy Text</button>
+      <button type="button" onclick="removeEmptyLines()">Proses</button>
+      <button type="button" onclick="copyText()">Salin</button>
     </form>
     <p id="output" class="para2"></p>
   </div>
