--- a/index.html
+++ b/index.html
@@ -61,12 +61,11 @@
 </div>
 
 <div class="container">
-    <h2>Hapus Baris Kosong</h2>
+    <h2>Remove Empty Lines from Text</h2>
     <form id="form">
-      <label for="textInput">Masukan Teks:</label>
+      <label for="textInput">Enter Text:</label>
       <textarea id="textInput" rows="5" cols="50"></textarea>
-      <button type="button" onclick="removeEmptyLines()">Proses</button>
-      <button type="button" onclick="copyText()">Salin</button>
+      <button type="button" onclick="removeEmptyLines()">Proses dan Salin</button>
     </form>
     <p id="output" class="para2"></p>
   </div>
