--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@ input[type="text"], select, textarea {
     border-radius: 4px;
     box-sizing: border-box;
 }
+input[type="number"] {
+    width: 80px;
+}
 button {
     background-color: #4caf50;
     color: white;
@@ -67,6 +70,8 @@ h1 {
 <div class="container">
     <h1>Report Mixing</h1>
     <form id="myForm">
+        <label for="nomorForm">Nomor Form:</label>
+        <input type="number" id="nomorForm" name="nomorForm" min="1" value="1"><br>
         <label for="namaMesin">Nama Mesin:</label>
         <select id="namaMesinPrefix" onchange="updateNamaMesinText()">
             <option value="Mesin 1000Kg (A)">Mesin 1000Kg (A)</option>
@@ -93,7 +98,14 @@ h1 {
         <input type="time" id="jamTransfer" name="jamTransfer" value="00:00" min="00:00" max="23:59">
         <button type="button" onclick="setJamSekarang()">Set Jam Sekarang</button><br>
         <label for="operatorMixing">Operator Mixing:</label>
-        <input type="text" id="operatorMixing" name="operatorMixing"><br>
+        <select id="operatorMixing" name="operatorMixing">
+            <option value="Gia">Gia</option>
+            <option value="Hapid">Hapid</option>
+            <option value="Ridwan">Ridwan</option>
+            <option value="Ilyas">Ilyas</option>
+            <option value="Abdy">Abdy</option>
+            <option value="Ard">Ard</option>
+        </select><br>
         <label for="rnd">RnD:</label>
         <select id="rnd" name="rnd">
             <option value="Chai">Chai</option>
@@ -129,6 +141,7 @@ h1 {
 
 <script>
 function tampilkanForm() {
+    var nomorForm = document.getElementById("nomorForm").value;
     var namaMesinPrefix = document.getElementById("namaMesinPrefix").value;
     var namaMesinSuffix = document.getElementById("namaMesinSuffix").value;
     var namaMesin = namaMesinPrefix + " " + namaMesinSuffix;
@@ -142,7 +155,7 @@ function tampilkanForm() {
     var qc = document.getElementById("qc").value;
     var note = document.getElementById("note").value;
     
-    var hasilForm = "<p><strong>1. Mesin:</strong> " + namaMesin + "</p>" +
+    var hasilForm = "<p><strong>" + nomorForm + ". Mesin:</strong> " + namaMesin + "</p>" +
                     "<p><strong>- Nama Produk:</strong> " + namaProduk + "</p>" +
                     "<p><strong>- Batch:</strong> " + batch + "</p>" +
                     "<p><strong>- Jam Transfer:</strong> " + jamTransfer + "</p>" +
